<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongC">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imgBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/c_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#1Affffff"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="220dp"
            android:layout_height="220dp"

            app:cardCornerRadius="110dp">

            <android.support.v7.widget.CardView
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                app:cardCornerRadius="105dp">

                <ImageView
                    android:id="@+id/rotateDisc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/imgBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/c_background" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txtC"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/artistC"
            android:textColor="#ffffff"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:weightSum="6"

            >

            <TextView
                android:id="@+id/elapseTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ffffff" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:thumbTint="#800000" />

            <TextView
                android:id="@+id/remainTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="#00ffffff"
                android:contentDescription="@string/btnPrevious"
                android:src="@drawable/previous_button" />

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:contentDescription="@string/btnPlay"
                android:src="@drawable/play_button" />

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="#00ffffff"
                android:contentDescription="@string/btnNext"
                android:src="@drawable/next_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnRepeat"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:contentDescription="@string/btnRepeat"
                android:src="@drawable/repeat_button" />

            <ImageButton
                android:id="@+id/btnShuffle"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:contentDescription="@string/btnShuffle"
                android:src="@drawable/shuffle_button" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>